manifests/openshell-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openshell-gw
  namespace: openshell
spec:
  to:
    kind: Service
    name: openshell
  port:
    targetPort: grpc
  tls:
    termination: passthrough
